--- a/stack.yaml
+++ b/stack.yaml
@@ -7,8 +7,11 @@ resolver: nightly-2016-04-30
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+- '../foldl-incremental'
+
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+- foldl-incremental-0.2.1.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
