--- a/chart-svg.cabal
+++ b/chart-svg.cabal
@@ -13,22 +13,29 @@ build-type:            Simple
 cabal-version:         >=1.10
 
 library
-  default-language:    Haskell2010
-  ghc-options:         -Wall
-  hs-source-dirs:      src
-  exposed-modules:     
-  build-depends:       base >= 4.7 && < 5
-                     , lens
-                     , diagrams
-                     , diagrams-lib
-                     , diagrams-svg
-                     , diagrams-core
-                     , random-fu
-                     , vector
-                     , colour
-                     , formatting
-                     , foldl
-                     , primitive
+  hs-source-dirs:    src
+  
+  exposed-modules:   Chart
+                   , Chart.Types
+
+  ghc-options:
+              -O2
+              -funbox-strict-fields
+              -fforce-recomp
+              
+  build-depends:     base ==4.*
+                   , protolude
+                   , diagrams
+                   , diagrams-lib
+                   , diagrams-svg
+                   , diagrams-core
+                   , vector
+                   , colour
+                   , formatting
+                   , foldl
+                   , primitive
+
+  default-language: Haskell2010
 
 executable readme
   default-language:    Haskell2010
@@ -41,8 +48,8 @@ executable readme
   hs-source-dirs:      ./
   main-is:             readme.lhs
   build-depends:       base
-                     , protolude
                      , chart-svg
+                     , protolude
                      , text
                      , diagrams
                      , diagrams-lib
@@ -54,6 +61,8 @@ executable readme
                      , formatting
                      , foldl
                      , primitive
+                     , foldl-incremental
+                     , histogram-fill
 
 source-repository head
   type:     git
