--- a/chart-svg.cabal
+++ b/chart-svg.cabal
@@ -34,6 +34,8 @@ library
                    , formatting
                    , foldl
                    , primitive
+                   , vector
+                   , containers
 
   default-language: Haskell2010
 
@@ -61,9 +63,9 @@ executable readme
                      , formatting
                      , foldl
                      , primitive
-                     , foldl-incremental
-                     , histogram-fill
+                     , vector
+                     , containers
 
 source-repository head
   type:     git
-  location: https://github.com/tonyday567/hdchart
+  location: https://github.com/tonyday567/chart-svg
