--- a/stack.yaml
+++ b/stack.yaml
@@ -2,16 +2,14 @@
 # For more information, see: http://docs.haskellstack.org/en/stable/yaml_configuration/
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: nightly-2016-04-30
+resolver: nightly-2016-05-28
 
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
-- '../foldl-incremental'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps:
-- foldl-incremental-0.2.1.0
+extra-deps: []
 
 # Override default flag values for local packages and extra-deps
 flags: {}
