--- a/chart-svg.cabal
+++ b/chart-svg.cabal
@@ -1,70 +1,160 @@
-name:                  chart-svg
-version:               0.1.0.0
-synopsis:              charts rendered to svg using diagrams
-description:           readme.lhs
-homepage:              https://github.com/tonyday567/hdchart
-license:               BSD3
-license-file:          LICENSE
-author:                Tony Day
-maintainer:            tonyday567@gmail.com
-copyright:             Tony Day
-category:              
-build-type:            Simple
-cabal-version:         >=1.10
+name:
+  chart-svg
+version:
+  0.1.0.0
+synopsis:
+  charts rendered to svg using diagrams
+description:
+  readme.lhs
+homepage:
+  https://github.com/tonyday567/chart-svg
+license:
+  BSD3
+license-file:
+  LICENSE
+author:
+  Tony Day
+maintainer:
+  tonyday567@gmail.com
+copyright:
+  2016 Tony Day
+build-type:
+  Simple
+cabal-version:
+  >=1.10
 
 library
-  hs-source-dirs:    src
-  
-  exposed-modules:   Chart
-                   , Chart.Types
-
+  hs-source-dirs:
+    src
+  exposed-modules:
+    Chart,
+    Chart.Types
   ghc-options:
-              -O2
-              -funbox-strict-fields
-              -fforce-recomp
-              
-  build-depends:     base ==4.*
-                   , colour
-                   , containers
-                   , data-default
-                   , diagrams
-                   , diagrams-core
-                   , diagrams-lib
-                   , diagrams-svg
-                   , foldl
-                   , lens
-                   , primitive
-                   , protolude
-                   , vector
-
-  default-language: Haskell2010
+    -O2
+    -funbox-strict-fields
+    -fforce-recomp          
+  build-depends:
+    base ==4.*,
+    colour,
+    containers,
+    data-default,
+    diagrams,
+    diagrams-core,
+    diagrams-lib,
+    diagrams-svg,
+    foldl,
+    lens,
+    primitive,
+    protolude
+  default-language:
+    Haskell2010
+  default-extensions:
+    NoImplicitPrelude,
+    UnicodeSyntax,
+    BangPatterns,
+    BinaryLiterals,
+    DeriveFoldable,
+    DeriveFunctor,
+    DeriveGeneric,
+    DeriveTraversable,
+    DisambiguateRecordFields,
+    EmptyCase,
+    FlexibleContexts,
+    FlexibleInstances,
+    FunctionalDependencies,
+    GADTSyntax,
+    InstanceSigs,
+    KindSignatures,
+    LambdaCase,
+    MonadComprehensions,
+    MultiParamTypeClasses,
+    MultiWayIf,
+    NegativeLiterals,
+    OverloadedStrings,
+    ParallelListComp,
+    PartialTypeSignatures,
+    PatternSynonyms,
+    RankNTypes,
+    RecordWildCards,
+    RecursiveDo,
+    ScopedTypeVariables,
+    TupleSections,
+    TypeFamilies,
+    TypeOperators
+  if impl(ghc>=8.0.1)
+    default-extensions:
+      ApplicativeDo,
+      DuplicateRecordFields,
+      TypeApplications
 
 executable readme
-  default-language:    Haskell2010
-  ghc-options:         -O2
-                       -funbox-strict-fields
-                       -fforce-recomp
-                       -threaded
-                       -rtsopts
-                       -with-rtsopts=-N
-  hs-source-dirs:      ./
-  main-is:             readme.lhs
-  build-depends:       base
-                     , chart-svg
-                     , colour
-                     , containers
-                     , diagrams
-                     , diagrams-core
-                     , diagrams-lib
-                     , diagrams-svg
-                     , foldl
-                     , lens
-                     , primitive
-                     , protolude
-                     , text
-                     , vector
-                     , random-fu
+  default-language:
+    Haskell2010
+  ghc-options:
+    -O2
+    -funbox-strict-fields
+    -fforce-recomp
+    -threaded
+    -rtsopts
+    -with-rtsopts=-N
+  hs-source-dirs:
+    ./
+  main-is:
+    readme.lhs
+  build-depends:
+    base,
+    chart-svg,
+    containers,
+    diagrams,
+    diagrams-core,
+    diagrams-lib,
+    diagrams-svg,
+    foldl,
+    lens,
+    primitive,
+    protolude,
+    random-fu
+  default-extensions:
+    NoImplicitPrelude,
+    UnicodeSyntax,
+    BangPatterns,
+    BinaryLiterals,
+    DeriveFoldable,
+    DeriveFunctor,
+    DeriveGeneric,
+    DeriveTraversable,
+    DisambiguateRecordFields,
+    EmptyCase,
+    FlexibleContexts,
+    FlexibleInstances,
+    FunctionalDependencies,
+    GADTSyntax,
+    InstanceSigs,
+    KindSignatures,
+    LambdaCase,
+    MonadComprehensions,
+    MultiParamTypeClasses,
+    MultiWayIf,
+    NegativeLiterals,
+    OverloadedStrings,
+    ParallelListComp,
+    PartialTypeSignatures,
+    PatternSynonyms,
+    RankNTypes,
+    RecordWildCards,
+    RecursiveDo,
+    ScopedTypeVariables,
+    TupleSections,
+    TypeFamilies,
+    TypeOperators
+  if impl(ghc>=8.0.1)
+    default-extensions:
+      ApplicativeDo,
+      DuplicateRecordFields,
+      TypeApplications
 
 source-repository head
-  type:     git
-  location: https://github.com/tonyday567/chart-svg
+  type:
+    git
+  location:
+    https://github.com/tonyday567/chart-svg
