--- a/stack.yaml
+++ b/stack.yaml
@@ -2,16 +2,18 @@
 # For more information, see: http://docs.haskellstack.org/en/stable/yaml_configuration/
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-6.17
+resolver: lts-7.3
 
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+- '../tower'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
 - erf-native-1.0.0.1
 - polynomial-0.7.2
+- diagrams-graphviz-1.3.1
 
 # Override default flag values for local packages and extra-deps
 flags: {}
