getting to compile on ghc8

--- a/stack.yaml
+++ b/stack.yaml
@@ -2,11 +2,15 @@
 # For more information, see: http://docs.haskellstack.org/en/stable/yaml_configuration/
 
 # Specifies the GHC version and set of packages available (e.g., lts-3.5, nightly-2015-09-21, ghc-7.10.2)
-resolver: lts-7.3
+resolver: lts-7.19
 
 # Local packages, usually specified by relative directory name
 packages:
 - '.'
+- location:
+    git: https://github.com/dequbed/polynomial.git
+    commit: 8f78235e6fe6e34624547e25049e916ad4c6e401
+  extra-dep: true
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
