up to axis re-re-scaling

--- a/chart-unit.cabal
+++ b/chart-unit.cabal
@@ -97,6 +97,8 @@ executable chart-unit-examples
     examples
   main-is:
     examples.hs
+  other-modules:
+    FakeData
   build-depends:
     base >= 4.7 && < 5,
     chart-unit,
