--- a/chart-unit.cabal
+++ b/chart-unit.cabal
@@ -1,7 +1,7 @@
 name:
   chart-unit
 version:
-  0.3.2
+  0.4.0
 synopsis:
   A set of native haskell charts.
 description:
@@ -45,7 +45,7 @@ library
     lens,
     linear,
     numhask >= 0.0.4 && < 1,
-    numhask-range >= 0.0.2 && < 1,
+    numhask-range >= 0.0.3 && < 1,
     text
   default-language:
     Haskell2010
@@ -108,7 +108,10 @@ executable chart-unit-examples
     primitive,
     ad,
     reflection,
-    tdigest
+    tdigest,
+    -- for animation example
+    diagrams-rasterific,
+    JuicyPixels
 
   default-extensions:
     NoImplicitPrelude,
