--- a/chart-unit.cabal
+++ b/chart-unit.cabal
@@ -56,7 +56,8 @@ library
     data-default,
     numhask >= 0.0.5 && < 1,
     numhask-range >= 0.0.3 && < 1,
-    text
+    text,
+    SVGFonts
   default-language:
     Haskell2010
   default-extensions:
@@ -115,6 +116,9 @@ executable chart-unit-examples
     foldl,
     text,
     numhask,
+    palette,
+    diagrams-svg,
+    SVGFonts,
     -- for data examples
     containers,
     mwc-random,
