--- a/chart-unit.cabal
+++ b/chart-unit.cabal
@@ -13,12 +13,10 @@ description:
   .
 extra-source-files:
   readme.md,
-  index.html,
   stack.yaml,
   other/*.svg
 extra-doc-files:
-  other/*.svg,
-  readme.md
+  other/*.svg
 category:
   charts
 homepage:
@@ -72,39 +70,19 @@ library
   default-language:
     Haskell2010
   default-extensions:
-    NoImplicitPrelude,
-    ExtendedDefaultRules,
-    UnicodeSyntax,
-    BangPatterns,
-    BinaryLiterals,
-    DeriveFoldable,
-    DeriveFunctor,
     DeriveGeneric,
     DeriveTraversable,
-    DisambiguateRecordFields,
-    EmptyCase,
     FlexibleContexts,
     FlexibleInstances,
-    FunctionalDependencies,
-    GADTSyntax,
     InstanceSigs,
-    KindSignatures,
-    LambdaCase,
-    MonadComprehensions,
     MultiParamTypeClasses,
-    MultiWayIf,
     NegativeLiterals,
+    NoImplicitPrelude,
     OverloadedStrings,
-    ParallelListComp,
-    PartialTypeSignatures,
     PatternSynonyms,
     RankNTypes,
-    RecordWildCards,
-    RecursiveDo,
-    ScopedTypeVariables,
-    TupleSections,
     TypeFamilies,
-    TypeOperators
+    UnicodeSyntax
 
 executable chart-source-examples
   default-language:
@@ -119,47 +97,37 @@ executable chart-source-examples
     examples
   main-is:
     sourceExamples.hs
+  other-modules:
+    FakeData
   build-depends:
     base >= 4.7 && < 5,
     chart-unit,
-    protolude,
+    containers,
+    diagrams-lib,
+    foldl,
     lens,
+    mwc-probability,
+    mwc-random,
     numhask,
-    text
+    primitive,
+    protolude,
+    tdigest,
+    text,
+    diagrams-rasterific
   default-extensions:
-    NoImplicitPrelude,
-    ExtendedDefaultRules,
-    UnicodeSyntax,
-    BangPatterns,
-    BinaryLiterals,
-    DeriveFoldable,
-    DeriveFunctor,
     DeriveGeneric,
     DeriveTraversable,
-    DisambiguateRecordFields,
-    EmptyCase,
     FlexibleContexts,
     FlexibleInstances,
-    FunctionalDependencies,
-    GADTSyntax,
     InstanceSigs,
-    KindSignatures,
-    LambdaCase,
-    MonadComprehensions,
     MultiParamTypeClasses,
-    MultiWayIf,
     NegativeLiterals,
+    NoImplicitPrelude,
     OverloadedStrings,
-    ParallelListComp,
-    PartialTypeSignatures,
     PatternSynonyms,
     RankNTypes,
-    RecordWildCards,
-    RecursiveDo,
-    ScopedTypeVariables,
-    TupleSections,
     TypeFamilies,
-    TypeOperators
+    UnicodeSyntax
 
 test-suite test
   default-language:
@@ -173,19 +141,24 @@ test-suite test
   build-depends:
     base >= 4.7 && < 5,
     chart-unit,
+    numhask,
     tasty,
     tasty-hspec,
-    numhask,
-    data-default,
-    lens,
-    diagrams-lib,
-    diagrams-svg,
     text
   default-extensions:
+    DeriveGeneric,
+    DeriveTraversable,
+    FlexibleContexts,
+    FlexibleInstances,
+    InstanceSigs,
+    MultiParamTypeClasses,
+    NegativeLiterals,
     NoImplicitPrelude,
-    ExtendedDefaultRules,
-    UnicodeSyntax,
-    NegativeLiterals
+    OverloadedStrings,
+    PatternSynonyms,
+    RankNTypes,
+    TypeFamilies,
+    UnicodeSyntax
 
 source-repository head
   type:
